--- a/Level_1_Manish_Ranjan.ipynb
+++ b/Level_1_Manish_Ranjan.ipynb
@@ -17,6 +17,34 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Level 1 – Baseline Model\n",
+        "## CIFAR-10 Image Classification\n",
+        "\n",
+        "This notebook implements a baseline image classification model\n",
+        "using transfer learning on the CIFAR-10 dataset. The purpose of\n",
+        "this baseline is to establish a strong reference point for\n",
+        "subsequent performance improvements in later levels.\n"
+      ],
+      "metadata": {
+        "id": "hT8dcJgLvtEX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Problem Statement\n",
+        "\n",
+        "The objective of Level-1 is to build a clean and reliable baseline\n",
+        "classifier using a pre-trained convolutional neural network and\n",
+        "evaluate its performance on the CIFAR-10 dataset.\n"
+      ],
+      "metadata": {
+        "id": "lqONE9BIv7At"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import torch\n",
@@ -92,6 +120,24 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Dataset & Split Strategy\n",
+        "\n",
+        "The CIFAR-10 dataset contains 60,000 RGB images across 10 classes.\n",
+        "The official test set (10,000 images) is used for final evaluation.\n",
+        "\n",
+        "From the training set:\n",
+        "- 80% is used for training\n",
+        "- 10% is used for validation\n",
+        "\n",
+        "This follows the mandatory 80/10/10 split requirement.\n"
+      ],
+      "metadata": {
+        "id": "3GNZClOwwAnH"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "full_train_dataset = datasets.CIFAR10(root=\"./data\", train=True, download=True, transform=train_transform)\n",
@@ -134,6 +180,22 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Baseline Model Architecture\n",
+        "\n",
+        "A pre-trained ResNet architecture is used as the baseline model.\n",
+        "The network is initialized with ImageNet weights, and the final\n",
+        "classification layer is replaced to match the 10 CIFAR-10 classes.\n",
+        "\n",
+        "This model is intentionally kept simple and unmodified to serve\n",
+        "as a fair baseline for later comparisons.\n"
+      ],
+      "metadata": {
+        "id": "Ku2lP0kIwI8x"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "model = models.resnet18(weights=models.ResNet18_Weights.IMAGENET1K_V1)\n",
@@ -151,6 +213,20 @@
       },
       "execution_count": 10,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Training Strategy\n",
+        "\n",
+        "- Loss function: Cross-entropy loss\n",
+        "- Optimizer: Adam or SGD\n",
+        "- Mini-batch training\n",
+        "- Validation accuracy monitored during training\n"
+      ],
+      "metadata": {
+        "id": "NHTl5a5NwQdr"
+      }
     },
     {
       "cell_type": "code",
@@ -190,6 +266,19 @@
       },
       "execution_count": 13,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Training Process\n",
+        "\n",
+        "The model is trained for multiple epochs using mini-batch gradient\n",
+        "descent. Training and validation metrics are tracked to monitor\n",
+        "learning behavior and convergence.\n"
+      ],
+      "metadata": {
+        "id": "tcstRsHuwnwP"
+      }
     },
     {
       "cell_type": "code",
@@ -280,6 +369,19 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Results\n",
+        "\n",
+        "The baseline model achieves test accuracy above 85%, satisfying\n",
+        "the Level-1 performance requirement. This result establishes a\n",
+        "strong reference point for further improvements.\n"
+      ],
+      "metadata": {
+        "id": "e719M0yjxBPg"
+      }
     },
     {
       "cell_type": "code",
@@ -429,6 +531,19 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Insights (Level-1)\n",
+        "\n",
+        "- Transfer learning enables strong performance with minimal tuning.\n",
+        "- The baseline model provides a stable reference for later levels.\n",
+        "- This setup ensures fair comparison with advanced techniques.\n"
+      ],
+      "metadata": {
+        "id": "of0JXR-zxGWI"
+      }
     }
   ]
 }
