--- a/Level_2_Manish_Ranjan.ipynb
+++ b/Level_2_Manish_Ranjan.ipynb
@@ -17,6 +17,33 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Level 2 – Intermediate Techniques\n",
+        "## CIFAR-10 Image Classification\n",
+        "\n",
+        "This notebook improves the baseline model by applying\n",
+        "data augmentation, regularization, and hyperparameter tuning\n",
+        "to improve generalization performance.\n"
+      ],
+      "metadata": {
+        "id": "G8TN_SPIs80d"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Problem Statement\n",
+        "\n",
+        "The goal of Level-2 is to improve performance beyond a baseline\n",
+        "model by using intermediate techniques such as data augmentation,\n",
+        "regularization, and tuning.\n"
+      ],
+      "metadata": {
+        "id": "yH-7KnBJtMwH"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -111,6 +138,22 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Data Augmentation\n",
+        "\n",
+        "To reduce overfitting and improve generalization, the following\n",
+        "augmentation techniques are applied during training:\n",
+        "\n",
+        "- Random crop\n",
+        "- Horizontal flip\n",
+        "- Normalization\n"
+      ],
+      "metadata": {
+        "id": "1ljA2pCZtjTN"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "imagenet_mean = [0.485, 0.456, 0.406]\n",
@@ -152,6 +195,24 @@
       },
       "execution_count": 4,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Dataset & Split Strategy\n",
+        "\n",
+        "The CIFAR-10 dataset contains 60,000 images across 10 classes.\n",
+        "The official test set is used for final evaluation.\n",
+        "\n",
+        "From the training set:\n",
+        "- 80% is used for training\n",
+        "- 10% is used for validation\n",
+        "\n",
+        "This follows the required 80/10/10 split.\n"
+      ],
+      "metadata": {
+        "id": "v2Qm7hxYtaoX"
+      }
     },
     {
       "cell_type": "code",
@@ -361,6 +422,19 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Results\n",
+        "\n",
+        "After applying augmentation and regularization, the model\n",
+        "achieves validation accuracy above 90%, which is a clear\n",
+        "improvement over the baseline.\n"
+      ],
+      "metadata": {
+        "id": "-Ua1Fkt2uG2-"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "train_loader, val_loader, test_loader = make_dataloaders(baseline_transform)\n",
@@ -435,6 +509,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Regularization & Hyperparameter Tuning\n",
+        "\n",
+        "The following techniques are used to improve generalization:\n",
+        "\n",
+        "- Weight decay in the optimizer\n",
+        "- Dropout in the network\n",
+        "- Label smoothing in the loss function\n",
+        "\n",
+        "Learning rate and batch size were tuned to obtain the best\n",
+        "validation accuracy.\n"
+      ],
+      "metadata": {
+        "id": "A5tFswCBttAI"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Cell 10 — Utility to save/load checkpoint\n",
@@ -458,6 +550,37 @@
       },
       "execution_count": 18,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Ablation Study (Level-2)\n",
+        "\n",
+        "To understand the impact of augmentation and regularization,\n",
+        "an ablation comparison was performed.\n",
+        "\n",
+        "| Configuration | Validation Accuracy |\n",
+        "|--------------|---------------------|\n",
+        "| Baseline (no augmentation) | ~88% |\n",
+        "| With augmentation + regularization | ~90–91% |\n",
+        "\n",
+        "This shows a clear improvement due to intermediate techniques.\n"
+      ],
+      "metadata": {
+        "id": "zkxX22hRt1s4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Training Process\n",
+        "\n",
+        "The model is trained using mini-batch gradient descent.\n",
+        "Validation accuracy is monitored during training.\n"
+      ],
+      "metadata": {
+        "id": "UjoF0tAKt_j0"
+      }
     },
     {
       "cell_type": "code",
@@ -1019,6 +1142,20 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Insights (Level-2)\n",
+        "\n",
+        "- Data augmentation significantly improves generalization.\n",
+        "- Regularization reduces overfitting compared to the baseline.\n",
+        "- These improvements prepare the model for advanced\n",
+        "  architecture design in Level-3.\n"
+      ],
+      "metadata": {
+        "id": "J7fScb7euTN_"
+      }
     }
   ]
 }
