--- a/Level_4_Manish_Ranjan.ipynb
+++ b/Level_4_Manish_Ranjan.ipynb
@@ -363,11 +363,41 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Level 4 – Expert Techniques (Ensemble Learning)\n",
+        "## CIFAR-10 Image Classification\n",
+        "\n",
+        "This notebook applies ensemble learning to further improve\n",
+        "classification performance on CIFAR-10. Multiple independently\n",
+        "trained models are combined to reduce variance and improve\n",
+        "generalization beyond a single architecture.\n"
+      ],
+      "metadata": {
+        "id": "b6zSz8sgxvmO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Problem Statement\n",
+        "\n",
+        "The objective of Level-4 is to improve classification accuracy\n",
+        "beyond Level-3 by combining multiple trained models using an\n",
+        "ensemble strategy. This level focuses on expert-level reasoning\n",
+        "and comparative analysis.\n"
+      ],
+      "metadata": {
+        "id": "EpD17t_8yFup"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "d-bP6ucjkHf4",
         "outputId": "10189bfb-6f15-4bbd-ae24-bd0a4987e08e"
@@ -421,6 +451,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Dataset & Split Strategy\n",
+        "\n",
+        "The CIFAR-10 dataset is used with the same 80/10/10 split as in\n",
+        "previous levels to ensure fair comparison.\n",
+        "\n",
+        "- 80% Training\n",
+        "- 10% Validation\n",
+        "- 10% Test (official CIFAR-10 test set)\n"
+      ],
+      "metadata": {
+        "id": "T1bT0OyNyM55"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import timm\n",
@@ -440,7 +486,7 @@
       "metadata": {
         "id": "bjfL378XlQfG"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -460,8 +506,21 @@
       "metadata": {
         "id": "M7T_rwhplVM4"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Individual Models\n",
+        "\n",
+        "Each model is trained independently (same pipeline, different seeds).\n",
+        "Models may share architecture but differ due to initialization and\n",
+        "training dynamics, producing complementary decision boundaries.\n"
+      ],
+      "metadata": {
+        "id": "eG1cw12_zfUO"
+      }
     },
     {
       "cell_type": "code",
@@ -501,12 +560,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "uJb3hEaolX-b",
         "outputId": "f415ea27-32b3-46dc-c960-18fbe8a929cd"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -541,8 +601,21 @@
       "metadata": {
         "id": "H1PHOes9lc6X"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Training Process\n",
+        "\n",
+        "Each model in the ensemble is trained with the same hyperparameters.\n",
+        "Validation accuracy is used for model selection; checkpointing stores\n",
+        "the best weights for later ensemble evaluation.\n"
+      ],
+      "metadata": {
+        "id": "TeiVZceSzpn_"
+      }
     },
     {
       "cell_type": "code",
@@ -588,8 +661,20 @@
       "metadata": {
         "id": "1UvSYwallgya"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Mixed Precision (AMP)\n",
+        "\n",
+        "Training uses automatic mixed precision (AMP) to speed up training on GPU\n",
+        "and reduce memory use. GradScaler is used to ensure numerical stability.\n"
+      ],
+      "metadata": {
+        "id": "VCBgTUhdz4Fq"
+      }
     },
     {
       "cell_type": "code",
@@ -623,7 +708,7 @@
         "id": "YJ_j-e9Aln9x",
         "outputId": "5478d4a3-f544-45bd-b28b-d0d536abce82"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -689,6 +774,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Checkpointing & Model Selection\n",
+        "\n",
+        "Best-performing checkpoints (on validation) are saved per model. These\n",
+        "saved checkpoints are later loaded for ensemble evaluation to ensure\n",
+        "the ensemble uses well-generalized weights.\n"
+      ],
+      "metadata": {
+        "id": "7tePGIba0KtM"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "def train_model(model, seed, name):\n",
@@ -704,7 +802,7 @@
       "metadata": {
         "id": "_uZIuEbZq20m"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -714,12 +812,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "DxNMIONsrDTl",
         "outputId": "cf9f6589-9f0c-4d16-e0a9-c5b69df87249"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -738,12 +837,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "lDPU4srprPUt",
         "outputId": "1566f8fc-ea2a-4d36-adfb-2756c4941181"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -762,8 +862,22 @@
       "metadata": {
         "id": "XFP4mpPyrhIg"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Ensemble Strategy\n",
+        "\n",
+        "We use an averaging (soft-voting) ensemble: model outputs (probabilities/logits)\n",
+        "from multiple independently trained models are aggregated (averaged). The final\n",
+        "prediction is the class with the highest averaged score. This reduces variance\n",
+        "and improves robustness.\n"
+      ],
+      "metadata": {
+        "id": "B8GYb5bHz-s4"
+      }
     },
     {
       "cell_type": "code",
@@ -792,12 +906,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "1CmWLgTIr5J2",
         "outputId": "d90466dd-31c3-431e-86ef-2a727334150c"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -807,6 +922,31 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Test Evaluation\n",
+        "\n",
+        "Final evaluation is performed on the official CIFAR-10 test set using the\n",
+        "ensemble predictions. Test accuracy, per-class accuracy, and confusion matrix\n",
+        "are computed for reporting.\n"
+      ],
+      "metadata": {
+        "id": "NKvLGubf0dMO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Training Curves\n",
+        "\n",
+        "Plots below show training & validation accuracy and loss over epochs.\n",
+        "They illustrate convergence and whether overfitting occurred.\n"
+      ],
+      "metadata": {
+        "id": "LaO5s1aU00qA"
+      }
     },
     {
       "cell_type": "code",
@@ -825,7 +965,7 @@
         "id": "nC5YJUyKsoaU",
         "outputId": "d2a13a1c-9d89-4ce4-8db7-ac52b0fdbced"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
@@ -854,6 +994,18 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Per-class Accuracy & Confusion Matrix\n",
+        "\n",
+        "We report per-class accuracy and the confusion matrix to identify which\n",
+        "classes are most confused (e.g., cat ↔ dog). This helps explain failure cases.\n"
+      ],
+      "metadata": {
+        "id": "5NyMYdjg0kUm"
+      }
     },
     {
       "cell_type": "code",
@@ -886,12 +1038,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "blgfhbzotUQe",
         "outputId": "ab7dae27-d928-40df-b544-cd8c92080ff3"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -901,6 +1054,28 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Comparative Analysis & Final Insights\n",
+        "\n",
+        "| Model / Setup              | Test Accuracy |\n",
+        "|---------------------------|---------------|\n",
+        "| Single Model (Level-3)    | 0.9183 (91.83%) |\n",
+        "| Ensemble (Level-4)        | 0.9542 (95.42%) |\n",
+        "\n",
+        "Insights:\n",
+        "- The Level-3 custom CNN with attention mechanisms achieves strong generalization on CIFAR-10, surpassing the 91% accuracy threshold required for advanced architecture design.\n",
+        "- The Level-4 ensemble combines multiple independently trained models using soft-voting, significantly reducing individual model errors.\n",
+        "- Ensembling improves robustness and boosts test accuracy by ~3.6% absolute compared to the single-model baseline.\n",
+        "- The main trade-off of the ensemble approach is increased inference cost and memory usage.\n",
+        "- Future work includes applying knowledge distillation to compress the ensemble into a single lightweight student model suitable for deployment.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "2Ho7b-C206CL"
+      }
     }
   ]
 }
